--- a/TODO
+++ b/TODO
@@ -4,11 +4,6 @@ For next public release:
 * check whether the version of libtool.m4 is compatible
 with ltconfig/ltmain.sh
 
-* Inter-library dependencies should be fully tracked by libtool
-and need to work for ltlibraries too. This requires looking up 
-installed libtool libraries for transparent support.
-Thomas Tanner has a patch for this. 
-
 * Alexandre Oliva suggests that we should have an option to hardcode
 paths into libraries, as well as binaries: `... -Wl,-soname
 -Wl,/tmp/libtest.so.0 ...'.  Tim Mooney wants the same thing.
@@ -16,14 +11,7 @@ paths into libraries, as well as binaries: `... -Wl,-soname
 * Lists of exported symbols should be stored in the pseudo library
 so that the size of lt_preloaded_symbols can be reduced.
 
-* Documentation:
-
-- AC_PROG_LIBTOOL, AC_ENABLE/DISABLE_SHARED/STATIC/FAST_INSTALL,
-  AC_LIBTOOL_DLOPEN, AC_LIBLTDL_CONVENIENCE/INSTALLABLE are not documented
-
-- Purpose and usage of convenience libraries must be better documented
-
-- some new internal variables are not documented yet.
+* Purpose and usage of convenience libraries must be better documented
 
 In the future:
 **************
