--- a/TODO
+++ b/TODO
@@ -16,14 +16,7 @@ paths into libraries, as well as binaries: `... -Wl,-soname
 * Lists of exported symbols should be stored in the pseudo library
 so that the size of lt_preloaded_symbols can be reduced.
 
-* Documentation:
-
-- AC_PROG_LIBTOOL, AC_ENABLE/DISABLE_SHARED/STATIC/FAST_INSTALL,
-  AC_LIBTOOL_DLOPEN, AC_LIBLTDL_CONVENIENCE/INSTALLABLE are not documented
-
-- Purpose and usage of convenience libraries must be better documented
-
-- some new internal variables are not documented yet.
+* Purpose and usage of convenience libraries must be better documented
 
 In the future:
 **************
