--- a/TODO
+++ b/TODO
@@ -4,10 +4,10 @@ For next public release:
 * check whether the version of libtool.m4 is compatible
 with ltconfig/ltmain.sh
 
-* Inter-library dependencies should be fully tracked by libtool
-and need to work for ltlibraries too. This requires looking up 
-installed libtool libraries for transparent support.
-Thomas Tanner has a patch for this. 
+* Inter-library dependencies should be fully tracked by libtool and
+need to work for ltlibraries too. This requires looking up installed
+libtool libraries for transparent support.  Support for this feature
+is under development, and is expected to be available in libtool 1.4.
 
 * Alexandre Oliva suggests that we should have an option to hardcode
 paths into libraries, as well as binaries: `... -Wl,-soname
@@ -15,8 +15,6 @@ paths into libraries, as well as binaries: `... -Wl,-soname
 
 * Lists of exported symbols should be stored in the pseudo library
 so that the size of lt_preloaded_symbols can be reduced.
-
-* Purpose and usage of convenience libraries must be better documented
 
 In the future:
 **************
