--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-23  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* TODO (cygwin):  food for though re: mutually dependant dlls.
+
 1999-03-21  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* tests/build-relink.test: if we relink and have hardcode_direct, 
