--- a/TODO
+++ b/TODO
@@ -39,6 +39,12 @@ import lib differently than if it will be linked with a static lib.  This will
 almost definitely require that automake pass some hints about linkage in to
 each object compilation line.
 
+* jeffdb@goodnet.com writes
+	all you need to do for mutually dependant
+	.dll's is to create an implib from a .def file
+so it appears that we might need to detect and handle mutual dependencies
+specially on win32 =(O|
+
 * If not cross-compiling, have the static flag test run the resulting
 binary to make sure everything works.
 
