--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-24  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
+
 1999-03-23 Thomas Tanner  <tanner@gmx.de>
 
 	* libltdl/ltdl.c: shlib_ext was declared even if LTDL_SHLIB_EXT
