--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-24  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
+
 1999-03-23  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* libltdl/configure.in: the sed expression for finding the shared
