* TODO: support -dlopen for libraries * doc/PLATFORMS: Erez Zadok reported that libtool works on bsdi 4.0.1 * doc/libtool.texi (libltdl): libltdl supports BeOS * libltdl/ltdl.c: shlib_ext was declared even if LTDL_SHLIB_EXT   didn't exist, partially reverted my previous patch: BeOS will   automatically search in ADDON_PATH * ltmain.in: don't allow relative run-paths, fixed a typo in a warning,   ignore -dlopen self for libraries and objects,   only accept -L paths that exist, minor cleanups,   bugfix: add -lc for normal libraries, not convenicence libraries   removed offensive warnings/comments

--- a/TODO
+++ b/TODO
@@ -30,6 +30,11 @@ In the future:
   possible would greatly improve libltdl's ability to be embedded in and 
   used by other systems.
 
+* Support -dlopen/dlpreopen for libraries.
+  This requires adding two new variables (dlopen/dlpreopen) to
+  the pseudo-library and later dlopening them when a program is linked
+  against such a library.
+
 * Fix */demo on win32.
 This may simply require resolving the item below.
 
