--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+1999-03-24 Thomas Tanner  <tanner@gmx.de>
+
+	* TODO: support -dlopen for libraries
+	* doc/PLATFORMS: Erez Zadok reported that libtool works on bsdi 4.0.1
+	* doc/libtool.texi (libltdl): libltdl supports BeOS
+	* libltdl/ltdl.c: shlib_ext was declared even if LTDL_SHLIB_EXT
+	  didn't exist, partially reverted my previous patch: BeOS will
+	  automatically search in ADDON_PATH
+	* ltmain.in: don't allow relative run-paths, fixed a typo in a warning,
+	  ignore -dlopen self for libraries and objects,
+	  only accept -L paths that exist, minor cleanups,
+	  bugfix: add -lc for normal libraries, not convenicence libraries
+	  removed offensive warnings/comments
+
 1999-03-24  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
