--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1999-03-24 Thomas Tanner  <tanner@gmx.de>
+
+	* doc/PLATFORMS: Erez Zadok reported that libtool works on bsdi 4.0.1
+	* doc/libtool.texi (libltdl): libltdl supports BeOS
+	* libltdl/ltdl.c: partially reverted my previous patch: BeOS will
+	  automatically search in ADDON_PATH
+	* ltmain.in: only accept -L paths that exist, support relative
+	  -L paths, removed offensive warnings/comments
+
 1999-03-24  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
