--- a/THANKS
+++ b/THANKS
@@ -34,3 +34,4 @@ Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
 Todd Vierling <tv@pobox.com>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
+Xavier Pianet <xavier@xingo.com>
