--- a/README
+++ b/README
@@ -9,13 +9,12 @@ details.
 Libtool supports building static libraries on all platforms.
 
 Shared library support has been implemented for these platforms:
-  AIX 3.x (*-*-aix3*)
-  AIX 4.x (*-*-aix4*)
-  AmigaOS (*-*-amigaos*)
-  BSD/OS 4.x (*-*-bsdi4*)
+  AIX 3.x, 4.x (*-*-aix3*, *-*-aix4*)
+  BeOS (*-*-beos*)
+  BSD/OS 2.1, 3.x, 4.x (*-*-bsdi2.1, *-*-bsdi3*, *-*-bsdi4*)
   Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
   DG/UX R4.11, R4.12, R4.20 (*-*-dguxR411*, *-*-dguxR412*, *-*-dguxR420*)
-  FreeBSD 2.x, 3.x (*-*-freebsd2*, *-*-freebsd3*)
+  FreeBSD 2.x, 3.x, 4.x (*-*-freebsd2*, *-*-freebsd3*, *-*-freebsd4*)
   GNU/Linux ELF (*-*-linux-gnu*, except aout, coff, and oldld)
   HP-UX 9.x, 10.x, 11.x (*-*-hpux9*, *-*-hpux10*, *-*-hpux11*) [see note]
   IRIX 5.x, 6.x (*-*-irix5*, *-*-irix6*)
@@ -58,6 +57,6 @@ support was tested on.
 
 If you have any suggestions or bug reports, or you wish to port
 libtool to a new platform, please send electronic mail to the libtool
-mailing list <bug-libtool@gnu.org>.  Don't forget to mention the
-version of libtool that you are currently using (by typing `ltconfig
---version').
+mailing list <libtool@gnu.org> or bug reports to <bug-libtool@gnu.org>.
+Don't forget to mention the version of libtool that you are currently
+using (by typing `ltconfig --version').
