* libltdl/ltdl.c (lt_dladdsearchdir): Forgot to mallocate the extra byte of memory for the teminating NUL, and forgot to strcpy the original path in to the new memory before appending the new path compononent.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-03-29  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/ltdl.c (lt_dladdsearchdir): Forgot to mallocate the
+	extra byte of memory for the teminating NUL, and forgot to
+	strcpy the original path in to the new memory before appending
+	the new path compononent.
+
 1999-03-27 Thomas Tanner  <tanner@gmx.de>
 
 	* NEWS: updated
