* doc/libtool.texi: fixed a typo * libtoolize.in: add the libtool scripts to libltdl.tar.gz * libtool.m4: don't AC_SUBST(USE_SYMBOL_UNDERSCORE),   AC_CHECK_LIBM sets LIBM, AC_LIBLTDL_INSTALLABLE doesn't work   when libltdl is already installed * *demo/Makefile.am: use LIBM * *demo/configure.in: AC_SUBST LIBM * libltdl/configure.in: use ac_cv_sys_symbol_underscore instead of   USE_SYMBOL_UNDERSCORE * ltconfig.in: added link_all_deplibs variable * doc/libtool.texi: document it * ltmain.in: always search for libname.la - don't eval libname_spec,   when linking libraries against static ones just print a warning   and add them to dependency_libs, add -lc before deplibs,   always link all dependencies of a static library or if   link_all_deplibs is yes, hardcode library paths if   hardcode_into_libs is no, don't link against dependency_libs   that already are deplibs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+1999-03-30 Thomas Tanner  <tanner@gmx.de>
+
+	* doc/libtool.texi: fixed a typo
+	* libtoolize.in: add the libtool scripts to libltdl.tar.gz
+	* libtool.m4: don't AC_SUBST(USE_SYMBOL_UNDERSCORE),
+	  AC_CHECK_LIBM sets LIBM, AC_LIBLTDL_INSTALLABLE doesn't work
+	  when libltdl is already installed
+	* *demo/Makefile.am: use LIBM
+	* *demo/configure.in: AC_SUBST LIBM
+	* libltdl/configure.in: use ac_cv_sys_symbol_underscore instead of
+	  USE_SYMBOL_UNDERSCORE
+	* ltconfig.in: added link_all_deplibs variable
+	* doc/libtool.texi: document it
+	* ltmain.in: always search for libname.la - don't eval libname_spec,
+	  when linking libraries against static ones just print a warning
+	  and add them to dependency_libs, add -lc before deplibs,
+	  always link all dependencies of a static library or if
+	  link_all_deplibs is yes, hardcode library paths if
+	  hardcode_into_libs is no, don't link against dependency_libs 
+	  that already are deplibs
+
 1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (aix4*, collect2name): make sure collect2 exists
