--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-02  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (link_all_deplibs): set to unknown by default
+	* ltmain.in: test != no, not = yes
+	* doc/libtool.texi: document unknown
+
 1999-04-01 Thomas Tanner  <tanner@gmx.de>
 
 	* doc/libtool.texi: documented deplibs.test
